--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python-telegram-bot==20.7
-flask==3.0.0
+python-telegram-bot==20.6
+flask==2.3.3
 requests==2.31.0
-steampy==1.3.0
-steam==1.4.4
+schedule==1.2.0
+python-dotenv==1.0.0
